# Gene-Reg-Predictor

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
data_pre-processing/: data_filter_explore.py  get_sequence.py
data_processing/: get_sequence.py
model/: get_embeddings.py
